--- a/Tesis.tex
+++ b/Tesis.tex
@@ -214,7 +214,8 @@
 \definecolor{MyDarkRed}{rgb}{0.5,0.04,0} 
 \definecolor{MyDarkGreen}{rgb}{0.0,0.4,0.08}
 
-\definecolor{SectionBlue}{rgb}{0.16,0.32,0.75} 
+\definecolor{ChapterBlue}{rgb}{0.16,0.32,0.75}
+\definecolor{SectionBlue}{rgb}{0.16,0.32,0.75}
 \definecolor{SubSectionBlue}{rgb}{0.0,0.53,0.74} 
 \definecolor{SubSubSectionBlue}{rgb}{0.0,0.58,0.65} 
 %------------------------------------------------------------------------------------
@@ -229,7 +230,7 @@
 \titlespacing*{\part}{0pt}{0pt}{20pt}
 
 \titleformat{\chapter}[display]
-    {\color{SectionBlue}\normalfont\LARGE\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}    
+    {\color{ChapterBlue}\normalfont\LARGE\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}    
 \titleformat{\section}
     {\color{SectionBlue}\normalfont\Large\bfseries}
     {\color{SectionBlue}\thesection}{1em}{}
@@ -247,6 +248,7 @@
 \newcommand{\myboldverb}[1]{{\color{MyDarkBlue}\bfseries{#1}}} % per enfasi in grassetto 
 \newcommand{\myverb}[1]{{\color{MyDarkBlue}\texttt{#1}}} % in evidenza
 \newcommand{\myurl}[1]{{\color{MyDarkGreen}\url{#1}}} % per url
+\newcommand{\refthesischapter}[1]{{\color{ChapterBlue}\textbf{Capítulo \ref{#1}}}}
 \newcommand{\refthesissection}[1]{{\color{SectionBlue}\textbf{Sección \ref{#1}}}}
 \newcommand{\refthesissubsection}[1]{{\color{SubSectionBlue}\textbf{Sección \ref{#1}}}}
 \newcommand{\refthesissubsubsection}[1]{{\color{SubSubSectionBlue}\textbf{Sección \ref{#1}}}}
