--- a/ref.bib
+++ b/ref.bib
@@ -723,3 +723,30 @@ ADS Bibcode: 1959cbs..book.....K},
 {ADS} Bibcode: 2021ApJS..254...10L},
 	keywords = {254, 444, 555, Astrophysics - Solar and Stellar Astrophysics, Close binary stars, Eclipsing binary stars, Fundamental parameters of stars}
 }
+
+@book{mackay_information_theory_inference_learning_algorithms_2003,
+	title = {Information Theory, Inference and Learning Algorithms},
+	url = {https://ui.adsabs.harvard.edu/abs/2003itil.book.....M},
+	abstract = {Information theory and inference, often taught separately, are here united in one entertaining textbook. These topics lie at the heart of many exciting areas of contemporary science and engineering - communication, signal processing, data mining, machine learning, pattern recognition, computational neuroscience, bioinformatics, and cryptography. This textbook introduces theory in tandem with applications. Information theory is taught alongside practical communication systems, such as arithmetic coding for data compression and sparse-graph codes for error-correction. A toolbox of inference techniques, including message-passing algorithms, Monte Carlo methods, and variational approximations, are developed alongside applications of these tools to clustering, convolutional codes, independent component analysis, and neural networks. The final part of the book describes the state of the art in error-correcting codes, including low-density parity-check codes, turbo codes, and digital fountain codes -- the twenty-first century standards for satellite communications, disk drives, and data broadcast. Richly illustrated, filled with worked examples and over 400 exercises, some with detailed solutions, David {MacKay}'s groundbreaking book is ideal for self-learning and for undergraduate or graduate courses. Interludes on crosswords, evolution, and sex provide entertainment along the way. In sum, this is a textbook on information, communication, and coding for a new generation of students, and an unparalleled entry point into these subjects for professionals in areas as diverse as computational biology, financial engineering, and machine learning.},
+	pagetotal = {640},
+	author = {Mackay, David J. C.},
+	urldate = {2024-06-22},
+	date = {2003-10-01},
+	note = {Publication Title: Information Theory {ADS} Bibcode: 2003itil.book.....M},
+}
+
+@article{goodman_ensemble_samplers_affine_invariance_gw10_stretch_move_2010,
+	title = {Ensemble samplers with affine invariance},
+	volume = {5},
+	issn = {2157-5452, 1559-3940},
+	url = {http://msp.org/camcos/2010/5-1/p04.xhtml},
+	doi = {10.2140/camcos.2010.5.65},
+	pages = {65--80},
+	number = {1},
+	journaltitle = {Communications in Applied Mathematics and Computational Science},
+	shortjournal = {{CAMCoS}},
+	author = {Goodman, Jonathan and Weare, Jonathan},
+	urldate = {2024-06-22},
+	date = {2010-01-31},
+	langid = {english}
+}
