Revisions on chapters 1 and partial 3

--- a/Introduccion/Estrella.tex
+++ b/Introduccion/Estrella.tex
@@ -5,7 +5,7 @@ estudio de los astros. \citetbookchapter{anIntroStellarAstro}{1} define una
 estrella como \quotes{un objeto celeste en el cual existe, o alguna vez existió
 (en el caso de una estrella muerta) fusión de hidrógeno sostenido en su núcleo.}
 El núcleo de cada estrella activa alcanza temperaturas en el orden de decenas de
-millones Kelvin, lo cual permite forjar nuevos elementos más pesados mediante el
+millones de Kelvin, lo cual permite generar nuevos elementos más pesados mediante el
 proceso de fusión nuclear. El mecanismo principal para la generación de energía
 es la fusión de hidrógeno a helio: $\ce{4 ^1H} \rightarrow \ce{^4He} + E$ .
 Dentro de todas las estrellas existe un balance de fuerzas que mantiene la forma
@@ -16,10 +16,10 @@ escalas menores a las de las propiedades macroscópicas de la estrella
 \citetbookchapter{anIntroTheoryStellarStructureEvolution}{2}, en la cual la
 estrella está en un estado de \textit{equilibrio termodinámico local}. 
 
-Una estrella es caracterizada por sus propiedades físicas, como su masa,
-composición química, radio, y temperatura. A continuación se planta una base
+Una estrella está caracterizada por sus propiedades físicas, como su masa,
+composición química, radio, y temperatura. A continuación se plantea una base
 para describir la estructura de una estrella al igual que su evolución,
-empezando con la formación de una \textit{protoestrella}, la cual a lo largo del
+empezando con la formación de una \textit{protoestrella}, la cual con el paso del
 tiempo se transforma en una estrella.
 
 \section{Formación}
@@ -33,7 +33,7 @@ Galaxia. Está compuesto de todo el polvo, gas, y partículas libres como los
 rayos cósmicos que atraviesan el espacio. La distribución de este material no es
 uniforme a cortas escalas de distancias astronómicas, por lo cual se observan
 acumulaciones de gas y polvo que se les conoce como \textbf{nubes moleculares}.
-Estas nebulosas se encuentran a temperaturas extremadamente frías, hasta los
+Estas nubes se encuentran a temperaturas extremadamente frías, hasta los
 10-20 K en su estado de equilibrio. Sin embargo, la nube puede llegar a ser
 perturbada de este estado, lo cual causa una distribución de masa y un campo
 gravitacional no uniforme, dando forma a cúmulos densos de material.
@@ -42,7 +42,7 @@ gravitacional no uniforme, dando forma a cúmulos densos de material.
 % be used in rest of doc)
 
 Dado suficiente tiempo una nube molecular va colapsando bajo su propio peso,
-donde la presión en la nube causa que el material se acumule en un solo punto en
+donde la presión en la nube provoca que el material se acumule en un solo punto en
 el espacio. Mientras más aumente la presión el gas se calienta; este proceso
 sigue hasta llegar a un equilibrio entre la presión interna del gas y la fuerza
 compresiva de gravedad, en donde la nube deja de contraerse. Dependiendo de la
@@ -68,7 +68,7 @@ nube se sigue comprimiendo hasta llegar a un punto en el cual puede mantener
 reacciones termonucleares continuas en su núcleo, llegando al punto de ser una
 estrella en \textbf{secuencia principal}. La \reffigure{protostarEvolutionFig}
 muestra la evolución de una protoestrella a una estrella secuencia principal con
-respecto a su temperatura y luminosidad.
+respecto a su masa.
 
 \begin{figure}[!ht]
 	\centering
@@ -101,10 +101,10 @@ densidad $\rho (r)$, temperatura $T(r)$, y aceleración gravitacional $g(r)$ com
 funciones con respecto a la distancia $r$ del centro. En base a estos
 fundamentos se puede deducir la estratificación de una estrella, formando varias
 capas de material con propiedades uniformes a lo largo de cada estrato. Dado que
-cada elemento está sujeto a un equilibrio de fuerzas descrita por la ecuación
-$P(r) \mathrm{d}A - [P(r) + \mathrm{d}P] \mathrm{d}A - [\rho(r) \mathrm{d}A
-\mathrm{d}r] g(r) = 0$, la cual se ve en la
-\reffigure{figuraEquilibrioHidrostatico}. Al simplificar esta ecuación e
+cada elemento dentro de la estrella está sujeto a un equilibrio de fuerzas descrita 
+por la ecuación $P(r) \mathrm{d}A - [P(r) + \mathrm{d}P] \mathrm{d}A - [\rho(r) 
+\mathrm{d}A \mathrm{d}r] g(r) = 0$, la cual se ve en la
+\reffigure{figuraEquilibrioHidrostatico}, al simplificar esta ecuación e
 introduciendo un término para la presión radiativa\textemdash debido a la
 transferencia de momento de los fotones generados en el núcleo estelar al
 material circundante\textemdash se obtiene la
@@ -124,8 +124,8 @@ material circundante\textemdash se obtiene la
 \begin{figure}[!ht]
 	\centering
 	\includegraphics[scale=0.5]{Introduccion/Figures/EquilibrioHidrostatico_LeBlanc.png}
-	\caption{Diagrama de fuerzas actuando sobre cada elemento superficial
-	$\mathrm{d}A$ de material de una estrella. Los efectos debido a elementos
+	\caption{Diagrama de fuerzas actuando sobre cada elemento dentro de la estrella con 
+	área $\mathrm{d}A$ de material de una estrella. Los efectos debido a elementos
 	adyacentes son nulos, debido a que la presión en cada lados es constante,
 	resultando en un gradiente de presión radial. Figura obtenida de
 	\citetbookchapter{anIntroStellarAstro}{2}.}
@@ -137,11 +137,12 @@ material circundante\textemdash se obtiene la
 Una estrella como resultado de su mecanismo de transporte de energía no está en
 un estado de equilibrio térmico. El núcleo, en donde se produce la gran mayoría
 de energía en una estrella, está a ordenes de magnitud más caliente que la
-fotosfera. Este transporte de energía ocurre principalmente por medio de
+fotósfera. Este transporte de energía ocurre principalmente por medio de
 \textit{radiación} y \textit{convección}; la conducción no juega un papel
-significativo. Para que una estrella se mantenga estable durante los miles de
+significativo ya que el camino libre medio de las partículas de gas es grande. 
+Para que una estrella se mantenga estable durante los miles de
 millones de años de su vida debe de estar en un tipo de equilibrio, donde cada
-estrato su volumen mantenga una composición estable a largas escalas de tiempo,
+capa mantiene una composición estable a largas escalas de tiempo,
 lo cual implica que el flujo de energía que ingresa a cada capa es igual a la
 cantidad de energía que libera a la siguiente capa. Esto lleva a cabo otra
 simplificación en el modelo estelar: una estrella la podemos considerar como un
@@ -165,8 +166,8 @@ en su interior.
 
 La gran mayoría de la radiación que recibimos de las estrellas\textemdash tanto
 de nuestro Sol como de sistemas estelares ajenos\textemdash proviene de su
-\textbf{fotosfera}, la capa exterior sometida a la influencia gravitacional del
-astro. Debido al transporte de energía en los estratos interiores la fotosfera
+\textbf{fotósfera}, la capa exterior sometida a la influencia gravitacional del
+astro. Debido al transporte de energía en las capas interiores la fotósfera
 se encuentra a una temperatura a ordenes de magnitud menor que la temperatura en
 el núcleo; la intensidad monocromática de la estrella depende de esta
 temperatura, por lo cual la \textbf{distribución de energía espectral}
@@ -176,7 +177,7 @@ Un \textbf{cuerpo negro} es aquel objeto que se encuentra en un estado de
 equilibrio termodinámico con su ambiente, absorbiendo energía (en el caso de una
 estrella esta sería por medio de radiación) a la misma tasa que la emite
 \citetbookchapter{astronomyPhysicalPerspective}{2}. El espectro de un cuerpo
-negro es descrito por la función de Planck
+negro está descrito por la función de Planck
 (\refequation{blackbodyPlanckEquation}), de la cual obtenemos la intensidad para
 cada longitud de onda dada la temperatura del cuerpo negro. La distribución
 espectral de energía se puede ver en la \reffigure{figuraCuerpoNegroEspectro}.
@@ -198,7 +199,7 @@ necesario implementar un modelo complejo.
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.5]{Introduccion/Figures/Figura Cuerpo Negro Espectro.png}
+	\includegraphics[scale=0.4]{Introduccion/Figures/Figura Cuerpo Negro Espectro.png}
 	\caption{Intensidad de un cuerpo negro con temperatura efectiva especificada.}
 	\label{figuraCuerpoNegroEspectro}
 \end{figure}
@@ -207,7 +208,7 @@ Sin embargo, en la práctica la composición química de una estrella (conocido
 como su \textbf{metalicidad}) llega a tener un efecto notable en su distribución
 espectral de energía medida. Esto se debe a la absorción, dispersión, y emisión
 de fotones por parte de las partículas en la atmósfera estelar, incluyendo
-electrones e iones libres, átomos, y moléculas esparcidas dentro de este
+electrones y iones libres, átomos, y moléculas esparcidas dentro de este
 volumen. Cada partícula interacciona con fotones de manera distinta, incluyendo
 la tasa de interacciones con respecto a la frecuencia de la radiación incidente.
 Existen varios códigos diseñados para modelar este comportamiento, llamados
@@ -227,24 +228,27 @@ del programa es necesario hacer referencia a \citeyearparen{kurucz_atlas_1970}.
 Este modelo parte de las condiciones del \textit{equilibrio hidrostático} y el
 \textit{equilibrio termodinámico local} para una estrella, lo cual simplifica el
 problema a un trato unidimensional; las propiedades físicas de la atmósfera
-depende unicamente de su distancia al núcleo. El grosor de cada capa es ordenes
-de magnitud menor que la superficie que abarca la fotosfera estelar, lo cual
-permite modelar el estrato usando varios segmentos discretos que se aproximan a
+dependen únicamente de su distancia al núcleo. El grosor de cada capa es ordenes
+de magnitud menor que la superficie que abarca la fotósfera estelar, lo cual
+permite modelar dicha capa usando varios segmentos discretos que se aproximan a
 \textit{planos paralelos}. La simetría esférica produce \textit{capas
 homogéneas}, cuyas propiedades físicas como su composición química es uniforme
 en cada capa, solo variando con su profundidad. Esto también permite ignorar
 estructuras finas en la superficie de la estrella como la granulación y las
 manchas solares (en ciertos ajustes de modelos estas manchas aún son requeridas
-para un ajuste adecuado a los datos observacionales dados). %TODO: cite later section
+para un ajuste adecuado a los datos observacionales dados como se presenta en el
+\refthesischapter{metodologia:modelocomputacional}). 
 
 \begin{figure}[!ht]
 	\centering
-	\includegraphics[scale=0.33]{Introduccion/Figures/Figura Kurucz_PHOEBE Reference.png}
-	\caption{Espectros sintéticos de las tablas de Kurucz para estrellas de varias temperaturas. El resto de los parámetros físicos utilizados se mantuvieron fijos para los cuatro modelos: $\log{g/g_0} = 4.0$ y [M/H] = 0.0. Figura obtenida de \citetbooksection{phoebeScientificReference}{4.2}.}
+	\includegraphics[scale=0.29]{Introduccion/Figures/Figura Kurucz_PHOEBE Reference.png}
+	\caption{Espectros sintéticos de las tablas de Kurucz para estrellas de
+	varias temperaturas. El resto de los parámetros físicos utilizados se
+	mantuvieron fijos para los cuatro modelos: $\log{g/g_0} = 4.0$ y [M/H] =
+	0.0. Figura obtenida de \citetbooksection{phoebeScientificReference}{4.2}.}
 	\label{figuraKuruczEspectro}
 \end{figure}
 
-% TODO: in PHOEBE section mention value interpolation
 La \reffigure{figuraKuruczEspectro} muestra el espectro sintético generado por
 el código \code{ATLAS} dado diferentes parámetros físicos. Estas aproximaciones
 son ideales para estudiar estrellas aisladas, las cuales son mayormente
@@ -256,7 +260,7 @@ como \code{ATLAS} que modelar una estrella como un simple cuerpo negro.
 
 \section{Evolución}
 
-En el transcurso del tiempo cada estrella será sujeta a ciertos cambios en su
+Con el transcurso del tiempo cada estrella estará sujeta a ciertos cambios en su
 estructura. Esto se debe a que podemos considerar a una estrella cómo un objeto
 aislado en el espacio, lo cual significa que no tendrá algún ingreso de material
 significativo para reemplazar el combustible \quotes{quemado} en las reacciones
@@ -266,7 +270,7 @@ estrella deberán cambiar para mantener el equilibrio termodinámico.
 El combustible primario de una estrella viene siendo el hidrógeno atómico, el
 cual se fusiona con otros átomos (protones individuales) libres, resultando en
 la producción de grandes cantidades de energía en forma de radiación y moléculas
-de helio como producto. El helio no es inmediatamente util para la estrella cómo
+de helio como producto. El helio no es inmediatamente útil para la estrella cómo
 combustible, ya que requiere temperaturas más altas de las que se encuentran
 durante esta fase evolutiva. Todas las estrellas conocidas pasan por esta etapa
 de evolución estelar; mientras que una estrella dependa principalmente del
