--- a/Introduccion/SistemasBinarios.tex
+++ b/Introduccion/SistemasBinarios.tex
@@ -326,7 +326,7 @@ astrofísico debe de cumplir con las siguientes condiciones:
 	para una estrella tipo solar
 	\citetbooksection{kallrath_eclipsing_binary_modelling_2009}{3.1.5}. Mientras
 	la escala de tiempo de estas distorsiones sea despreciable con respecto al
-	periodo orbital la superficie estelar (su fotosfera) se puede parametrizar
+	periodo orbital la superficie estelar (su fotósfera) se puede parametrizar
 	con el modelo de Roche.
 
 	\item[Alta densidad de masa -] A pesar de que el material de una estrella
@@ -518,7 +518,7 @@ llamado un sistema en \textit{sobre-contacto} debido a que las estrellas no solo
 están en contacto con su lóbulo de Roche, si no que su material se derrama fuera
 del lóbulo crítico) da origen al fenómeno de una \textbf{envoltura común}: esta
 es una superficie equipotencial que envuelve a ambas estrellas, en lugar de que
-cada componente tenga su propia fotosfera independiente. La región de
+cada componente tenga su propia fotósfera independiente. La región de
 conexión\textemdash conocida como el \quotes{cuello} del sistema por su nombre
 en inglés\textemdash actúa como un puente entre las dos estrellas, sirviendo
 como un medio de transporte de tanto material estelar como energía. Ejemplos de
